# Progetto-finale-Scacchiera-elettronica-I-goblin-lancieri

./: .gitignore  CMakeLists-old-04-01-2022.txt  CMakeLists-old.txt  CMakeLists.txt  CMakeLists_2.txt  README.md  file_out.txt  log.txt  out.txt
include/: bishop.h  board.h  computer_player.h  file_replay_player.h  human_player.h  king.h  knight.h  pawn.h  piece.h  player.h  player_id.h  position.h  queen.h  replay.h  replay_player.h  rook.h  scacchiera.h  video_replay_player.h
src/: bishop.cpp  board.cpp  board_setup.cpp  computer_player.cpp  file_replay_player.cpp  human_player.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  player.cpp  position.cpp  queen.cpp  replay.cpp  replay_player.cpp  rook.cpp  scacchiera.cpp  scacchiera_setup.cpp  video_replay_player.cpp
